# arch_skeleton

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: Control.action  Plan.action
launcher/: manual_sense.launch  random_sense.launch
msg/: Gesture.msg  Point.msg  Speech.msg
scripts/: architecture_name_mapper.py  controller.py  gesture.py  planner.py  robot_states.py  speech.py
srv/: GetPose.srv  SetPose.srv
utilities/arch_skeleton/: architecture_name_mapper.py
